Added back .pk4 support but only for paks without a dll inside

--- a/neo/tools/compilers/CMakeLists.txt
+++ b/neo/tools/compilers/CMakeLists.txt
@@ -35,6 +35,7 @@ set(MC_FRAMEWORK_INCLUDES
 	../../framework/File.h
 	../../framework/File_Manifest.h
 	../../framework/File_Resource.h
+	../../framework/File_Zip.h
 	../../framework/FileSystem.h
 	../../framework/Licensee.h
 	../../framework/DeclManager.h
@@ -49,6 +50,7 @@ set(MC_FRAMEWORK_SOURCES
 	../../framework/File.cpp
 	../../framework/File_Manifest.cpp
 	../../framework/File_Resource.cpp
+	../../framework/File_Zip.cpp
 	../../framework/FileSystem.cpp
 	../../framework/DeclManager.cpp
 	../../framework/DeclEntityDef.cpp
@@ -117,6 +119,18 @@ file(GLOB MC_IMTUI_SOURCES ../../libs/imtui/*.cpp)
 file(GLOB MC_IMGUI_INCLUDES ../../libs/imtui/imgui/*.h)
 file(GLOB MC_IMGUI_SOURCES ../../libs/imtui/imgui/*.cpp)
 
+if (NOT ZLIB_FOUND)
+	file(GLOB MC_ZLIB_INCLUDES ../../libs/zlib/*.h)
+	file(GLOB MC_ZLIB_SOURCES ../../libs/zlib/*.c)
+else()
+	set(MC_ZLIB_INCLUDES "")
+	set(MC_ZLIB_SOURCES "")
+endif()
+
+
+file(GLOB MC_MINIZIP_INCLUDES ../../libs/zlib/minizip/*.h)
+file(GLOB MC_MINIZIP_SOURCES ../../libs/zlib/minizip/*.c ../../libs/zlib/minizip/*.cpp)
+
 if(MSVC)
 	file(GLOB CURSES_INCLUDES ../../libs/imtui/pdcurses/*.h)
 
@@ -168,6 +182,8 @@ set(MC_INCLUDES_ALL
 			${MC_GAME_INCLUDES}
 			${MC_IMGUI_INCLUDES}
 			${MC_IMTUI_INCLUDES}
+			${MC_ZLIB_INCLUDES}
+			${MC_MINIZIP_INCLUDES}
 			)
 			
 set(MC_SOURCES_ALL
@@ -182,6 +198,8 @@ set(MC_SOURCES_ALL
 			${MC_GAME_SOURCES}
 			${MC_IMGUI_SOURCES}
 			${MC_IMTUI_SOURCES}
+			${MC_ZLIB_SOURCES}
+			${MC_MINIZIP_SOURCES}
 			)
 
 source_group("main" FILES ${MC_INCLUDES})
@@ -205,11 +223,16 @@ source_group("libs\\imtui" FILES ${MC_IMTUI_SOURCES})
 source_group("libs\\imtui\\imgui" FILES ${MC_IMGUI_INCLUDES})
 source_group("libs\\imtui\\imgui" FILES ${MC_IMGUI_SOURCES})
 
+source_group("libs\\zlib" FILES ${MC_ZLIB_INCLUDES})
+source_group("libs\\zlib" FILES ${MC_ZLIB_SOURCES})
+source_group("libs\\zlib\\minizip" FILES ${MC_MINIZIP_INCLUDES})
+source_group("libs\\zlib\\minizip" FILES ${MC_MINIZIP_SOURCES})
+
 source_group("anim" FILES ${MC_GAME_INCLUDES})
 source_group("anim" FILES ${MC_GAME_SOURCES})
 
 set(MC_PRECOMPILED_SOURCES ${MC_SOURCES_ALL})
-list(REMOVE_ITEM MC_PRECOMPILED_SOURCES ${MC_MIKKTSPACE_SOURCES} ${MC_IMGUI_SOURCES} ${MC_IMTUI_SOURCES})
+list(REMOVE_ITEM MC_PRECOMPILED_SOURCES ${MC_MIKKTSPACE_SOURCES} ${MC_IMGUI_SOURCES} ${MC_IMTUI_SOURCES} ${MC_ZLIB_SOURCES} ${MC_MINIZIP_SOURCES})
 
 include_directories(
 	.
