Fixed gcc compile error. Close #911 #909

--- a/neo/CMakeLists.txt
+++ b/neo/CMakeLists.txt
@@ -126,6 +126,8 @@ if(CMAKE_COMPILER_IS_GNUCC OR CMAKE_C_COMPILER_ID MATCHES "Clang")
 	#add_definitions(-Wall)
 	add_definitions(-Werror=format-security)
 	add_definitions(-Werror=format)
+	add_definitions(-Wno-format-zero-length)
+	add_definitions(-Wno-nonnull)
 
 	# Compiler check (needs -std=c++17 flag)
 	include(CheckCXXCompilerFlag)
