--- a/neo/shaders/shaders.cfg
+++ b/neo/shaders/shaders.cfg
@@ -56,6 +56,10 @@ builtin/post/retro_c64.vs.hlsl -T vs
 builtin/post/retro_c64.ps.hlsl -T ps
 builtin/post/retro_cpc.vs.hlsl -T vs
 builtin/post/retro_cpc.ps.hlsl -T ps
+builtin/post/retro_2bit.vs.hlsl -T vs
+builtin/post/retro_2bit.ps.hlsl -T ps
+builtin/post/retro_nes.vs.hlsl -T vs
+builtin/post/retro_nes.ps.hlsl -T ps
 builtin/post/retro_genesis.vs.hlsl -T vs
 builtin/post/retro_genesis.ps.hlsl -T ps
 builtin/post/retro_ps1.vs.hlsl -T vs
