--- a/base/devtools.cfg
+++ b/base/devtools.cfg
@@ -10,7 +10,7 @@ bind "F4" "toggle r_skipInteractions"
 bind "F5" "savegame quick"
 bind "F6" "toggle r_showLightGrid 1 3 4 0"
 bind "F7" "toggle r_renderMode 0 1 2 3 4 5 6 7 8 9 10 11"
-bind "F8" "toggle r_useCRTPostFX 0 1 2"
+bind "F8" "toggle r_useCRTPostFX 0 1 2 3"
 bind "F9" "loadgame quick"
 //bind "F10" "toggle com_fixedTic"
 bind "F11" "toggle r_useFilmicPostFX"
