--- a/neo/shaders/shaders.cfg
+++ b/neo/shaders/shaders.cfg
@@ -70,6 +70,8 @@ builtin/post/crt_newpixie.vs.hlsl -T vs
 builtin/post/crt_newpixie.ps.hlsl -T ps
 builtin/post/crt_easymode.vs.hlsl -T vs
 builtin/post/crt_easymode.ps.hlsl -T ps
+builtin/post/crt_aperture.vs.hlsl -T vs
+builtin/post/crt_aperture.ps.hlsl -T ps
 builtin/post/screen.vs.hlsl -T vs
 builtin/post/screen.ps.hlsl -T ps
 builtin/post/tonemap.vs.hlsl -T vs -D BRIGHTPASS={0,1} -D HDR_DEBUG={0,1}
