Ported advanced CRT shader by whkrmrgks0

--- a/neo/shaders/shaders.cfg
+++ b/neo/shaders/shaders.cfg
@@ -64,6 +64,8 @@ builtin/post/retro_genesis.vs.hlsl -T vs
 builtin/post/retro_genesis.ps.hlsl -T ps
 builtin/post/retro_ps1.vs.hlsl -T vs
 builtin/post/retro_ps1.ps.hlsl -T ps
+builtin/post/crt_advanced.vs.hlsl -T vs
+builtin/post/crt_advanced.ps.hlsl -T ps
 builtin/post/crt_mattias.vs.hlsl -T vs
 builtin/post/crt_mattias.ps.hlsl -T ps
 builtin/post/crt_newpixie.vs.hlsl -T vs
