rbdmap: Suppress warnings from zlib and minizip third-party source libraries

--- a/neo/tools/compilers/CMakeLists.txt
+++ b/neo/tools/compilers/CMakeLists.txt
@@ -289,6 +289,14 @@ else()
 	endforeach()
 	endif()
 
+	# SRS - disable certain gcc/clang warnings for select third-party source libraries, consider updating versions in the future?
+	set_source_files_properties(
+			${MC_ZLIB_SOURCES}
+			${MC_MINIZIP_SOURCES}
+			PROPERTIES
+			COMPILE_FLAGS "-Wno-stringop-overread -Wno-deprecated-non-prototype"
+			)
+
 	include_directories(.)
 	
 	if (USE_PRECOMPILED_HEADERS)
