--- a/base/devtools.cfg
+++ b/base/devtools.cfg
@@ -2,16 +2,19 @@
 bind "I" "toggle r_showSurfaceInfo"
 bind "N" "noclip"
 bind "M" "spawn moveable_macbethchart"
+bind "O" "toggle r_useMaskedOcclusionCulling"
+bind "P" "toggle r_showPortals"
 
+// bind "F1" "toggle r_showViewEnvprobes 1 2 0"
 bind "F1" "editLights"
 bind "F2" "toggle r_showTris 1 2 0"
-bind "F3" "toggle r_forceAmbient 0.5 1.0 0"
+bind "F3" "toggle r_forceAmbient 0.3 0.5 1.0 0"
 bind "F4" "toggle r_skipInteractions"
 bind "F5" "savegame quick"
-//bind "F6" "toggle r_showLightGrid 1 3 4 0"
+// bind "F6" "toggle r_showLightGrid 1 3 4 0"
 bind "F6" "toggle r_renderMode 0 1 3 5 7 9 11"
 bind "F7" "toggle r_renderMode 0 1 2 3 4 5 6 7 8 9 10 11"
 bind "F8" "toggle r_useCRTPostFX 0 1 2 3"
 bind "F9" "loadgame quick"
-//bind "F10" "toggle com_fixedTic"
+// bind "F10" "toggle com_fixedTic"
 bind "F11" "toggle r_useFilmicPostFX"
