Fixed a few bugs in the convertMapQuakeToDoom command

--- a/base/devtools.cfg
+++ b/base/devtools.cfg
@@ -4,8 +4,8 @@ bind "N" "noclip"
 bind "M" "spawn moveable_macbethchart"
 bind "O" "toggle r_useMaskedOcclusionCulling"
 bind "P" "toggle r_showPortals"
+// bind "P" "toggle r_showViewEnvprobes 1 2 0"
 
-// bind "F1" "toggle r_showViewEnvprobes 1 2 0"
 bind "F1" "editLights"
 bind "F2" "toggle r_showTris 1 2 0"
 bind "F3" "toggle r_forceAmbient 0.3 0.5 1.0 0"
