Raster triangles faster at the expense of memory

--- a/base/devtools.cfg
+++ b/base/devtools.cfg
@@ -1,7 +1,8 @@
 
 bind "I" "toggle r_showSurfaceInfo"
 bind "N" "noclip"
-bind "M" "spawn moveable_macbethchart"
+//bind "M" "spawn moveable_macbethchart"
+bind "M" "maskShot"
 bind "O" "toggle r_useMaskedOcclusionCulling"
 bind "P" "toggle r_showPortals"
 // bind "P" "toggle r_showViewEnvprobes 1 2 0"
