--- a/neo/idlib/CMakeLists.txt
+++ b/neo/idlib/CMakeLists.txt
@@ -122,11 +122,15 @@ else()
 			LIST(APPEND _compiler_FLAGS " -I${item}")
 		ENDFOREACH(item)
 
-		GET_DIRECTORY_PROPERTY(_directory_flags DEFINITIONS)
+		GET_DIRECTORY_PROPERTY(_directory_flags COMPILE_OPTIONS)
 		LIST(APPEND _compiler_FLAGS ${_directory_flags})
-
 		SEPARATE_ARGUMENTS(_compiler_FLAGS)
 	
+		GET_DIRECTORY_PROPERTY(_directory_flags COMPILE_DEFINITIONS)
+		FOREACH(item ${_directory_flags})
+			LIST(APPEND _compiler_FLAGS "-D${item}")
+		ENDFOREACH(item)
+
 		if(OPTICK)
 			LIST(APPEND _compiler_FLAGS -DUSE_OPTICK=1)
 		else()
